fix being unable to unmute autoplayed video on IOS

--- a/src/sass/components/volume.scss
+++ b/src/sass/components/volume.scss
@@ -23,13 +23,6 @@
     }
 }
 
-// Hide sound controls on iOS
-// It's not supported to change volume using JavaScript:
-// https://developer.apple.com/library/safari/documentation/AudioVideo/Conceptual/Using_HTML5_Audio_Video/Device-SpecificConsiderations/Device-SpecificConsiderations.html
-.plyr--is-ios .plyr__volume {
-    display: none !important;
-}
-
 // Vimeo has no toggle mute method so hide mute button
 // https://github.com/vimeo/player.js/issues/236#issuecomment-384663183
 .plyr--is-ios.plyr--vimeo [data-plyr='mute'] {
